--- a/Data Exploration and Analysis Using Pandas.ipynb
+++ b/Data Exploration and Analysis Using Pandas.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "#load data into DataFrame\n",
-    "df=pd.read_csv(r\"C:\\Users\\Hp\\Downloads\\mentalhealth.csv\")\n",
+    "df=pd.read_csv(r\"\\mentalhealth.csv\")\n",
     "\n",
     "# delete rows with zero \n",
     "df=df.dropna()\n"
