--- a/Data Cleaning and Analysis Using Pandas and Matplotlib.ipynb
+++ b/Data Cleaning and Analysis Using Pandas and Matplotlib.ipynb
@@ -967,24 +967,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['United States' 'Poland' 'Australia' 'Canada' 'United Kingdom'\n",
-      " 'South Africa' 'Sweden' 'New Zealand' 'Netherlands' 'India' 'Belgium'\n",
-      " 'Ireland' 'France' 'Portugal' 'Brazil' 'Costa Rica' 'Russia' 'Germany'\n",
-      " 'Switzerland' 'Finland' 'Israel' 'Italy' 'Bosnia and Herzegovina'\n",
-      " 'Singapore' 'Nigeria' 'Croatia' 'Thailand' 'Denmark' 'Mexico' 'Greece'\n",
-      " 'Moldova' 'Colombia' 'Georgia' 'Czech Republic' 'Philippines']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(df['country'].unique())"
+    "#print(df['country'].unique())"
    ]
   },
   {
